force-app/main/default/objects/SauvegardeRecherche__c/SauvegardeRecherche__c.object-meta.xml
<CustomObject>
    <description>CRM-449 : Sauvegarde des recherches des utilisateurs pour les objets contact, compte, chantier et projet</description>
    <label>Sauvegarde recherche</label>
    <nameField>
        <displayFormat>SR/{YYYY}/{00000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sauvegardes recherche</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>