force-app/main/default/objects/SauvegardeRecherche__c/fields/criteresRecherche__c.field-meta.xml
<CustomField>
    <fullName>criteresRecherche__c</fullName>
    <description>CRM-449 : Critères de recherche saisis par l’utilisateur</description>
    <label>Critères de recherche</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>