force-app/main/default/objects/SauvegardeRecherche__c/fields/nomRecherche__c.field-meta.xml
<CustomField>
    <fullName>nomRecherche__c</fullName>
    <description>CRM-449 : Nom de la recherche saisi par l’utilisateur</description>
    <label>Nom de la recherche</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>