force-app/main/default/objects/SauvegardeRecherche__c/fields/objet__c.field-meta.xml
<CustomField>
    <fullName>objet__c</fullName>
    <description>CRM-449 : Nom API de l’objet pour la sauvegarde de la recherche</description>
    <label>Objet</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>