force-app/main/default/objects/SauvegardeRecherche__c/fields/utilisateur__c.field-meta.xml
<CustomField>
    <fullName>utilisateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-449 : Utilisateur de la sauvegarde</description>
    <label>Utilisateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sauvegardes_recherche</relationshipName>
    <type>Lookup</type>
</CustomField>